--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ nav a{
 }
 
 .hero{
-  height: 80vh;
+  height: 90vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -106,6 +106,55 @@ h2{
   border-radius: 25vh;
 }
 
+main{
+  height: 80vh;
+  margin-top: 10rem;
+  background-color: darkgray;
+  padding-top: 3rem;
+}
+
+h3, .ambition-text{
+  text-align: center;
+}
+
+
 .skills-container{
-  display: grid;
+  display: flex;
+  justify-content: space-between;
+  max-width: 70rem;
+  margin: auto;
+  margin-top: 5rem;
+  gap: 5rem;
+}
+
+.specific-container{
+  border: 1px solid red;
+  padding: 1rem;
+}
+
+.tags{
+  display: flex;
+  gap: 10px;
+}
+
+.projects{
+  height: 80vh;
+}
+
+h4, .project-sub{
+  text-align: center;
+}
+
+.project-grouper{
+  display: flex;
+  justify-content: space-between;
+  max-width: 70rem;
+  margin: auto;
+  margin-top: 5rem;
+  gap: 5rem;
+}
+
+.project-container{
+  border: 1px solid red;
+  padding: 1rem;
 }
